@@ -24,12 +24,18 @@ protected:
     virtual void play_event( Midi_item* l );
     virtual void do_removal_processing();
     virtual void do_creation_processing();
+    // <ugh>
+    virtual void set_track( int& track_i_r );
+    virtual int get_track_i() const;
+    // </ugh>
 
 private:
     void header();
 
     Moment midi_mom_;
     Midi_track* midi_track_p_;
+
+    int track_i_;
 };
 
 #endif // STAFF_PERFORMER_HH
