@@ -7,6 +7,7 @@
 */
 
 
+#include <limits.h>
 #include "music.hh"
 #include "debug.hh"
 #include "music-list.hh"
@@ -28,7 +29,8 @@ IMPLEMENT_IS_TYPE_B1(Chord,Music_list);
 MInterval
 Chord::time_int()const
 {
-    MInterval m;
+//    MInterval m( -(Real)INT_MAX, (Real)INT_MAX );
+    MInterval m( 0, 0 );
     for (iter(music_p_list_.top(), i); i.ok(); i++)
 	m.unite(i->time_int());
     return m;
